# changelog-assistant

./: README.md  README.ru.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/changelog_assistant/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
